--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "maze-pixi",
-  "version": "1.0.0",
+  "name": "data-structures",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open --mode development",
-    "server": "nodemon src/server"
+    "start": "webpack-dev-server --open --mode development"
   },
   "author": "shtabnoy",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "nodemon": "^1.19.1",
-    "typescript": "^3.5.2",
-    "webpack-dev-server": "^3.7.1"
+    "typescript": "^3.7.4",
+    "webpack-dev-server": "^3.10.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4"
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   }
 }
